--- a/AboutSSA.html
+++ b/AboutSSA.html
@@ -52,7 +52,7 @@
                             <a href="index.html" class="appname">
                                 Smart Stove Alert
                             </a>
-                            <span class="apptagname">Saftey begins at home</span>
+                            <span class="apptagname">Safety begins at home</span>
                         </div>
                         <div class="menu-right">
 
@@ -72,7 +72,7 @@
                                     </td>
                                     <td>
                                         <div class="cart" id="buynow">
-                                            Buy Now
+                                            Pre Order $0.00
                                         </div>
                                     </td>
                                 </tr>
@@ -93,7 +93,7 @@
                 <div id="gallery" style="display:none;">
 
                     <a class="aboutRightLinks">
-                        <img alt="Smart Stove Alert - Design 4"
+                        <img alt="Smart Stove Alert - Design 1"
                              src="images/SS2.JPG"
                              data-image="images/SS2.JPG"
                              style="display:none">
@@ -104,12 +104,12 @@
                              data-image="images/SS3.JPG"
                              style="display:none">
                     </a>
-                    <a class="aboutRightLinks">
-                        <img alt="Smart Stove Alert - Design 1"
+                    <!--<a class="aboutRightLinks">
+                        <img alt="Smart Stove Alert - Design 3"
                              src="images/SS1.JPG"
                              data-image="images/SS1.JPG"
                              style="display:none;">
-                    </a>
+                    </a>-->
 
                     <!--<a class="aboutRightLinks">
                         <img alt="Smart Stove Alert - Design 3"
@@ -126,7 +126,7 @@
             </div>
             <div class="aboutRight">
                 <p>
-                    The Smart Stove Alert is is game changer in kitchen safety. It detects dangerous situations of the stove before fire hazard occurs.
+                    The Smart Stove Alert is game changer in kitchen safety. It detects dangerous situations of the stove before fire hazard occurs.
                 <p>It has following specifications:</p>
                 <ul>
                     <li><span style="color: #f4511e;">Smart Monitor</span>: It monitors the entire stove surface for dangerous situations through a High Sensitivity / Low-Light camera which is powered by the 216 MHz ARM Cortex M7 processor</li>
@@ -147,13 +147,13 @@
             <div class="modal-content">
                 <span class="close">&times;</span>
                 <div>
-                    <h2 style="text-align:center;">Shopping Cart</h2>
+                    <h2 style="text-align:center;">Pre Order Details</h2>
 
                     <div style="text-align:center; color:#f4511e;">Thank You Choosing Smart Stove Alert</div>
                     <br />
                     <div style="overflow:auto" id="checkoutcontent">
                         <div class="checkOutLeft">
-                            <span class="cartHeadingLabel">Customer Information</span>
+                                                       <span class="cartHeadingLabel">Customer Information</span>
                             <br />
                             <form id="checkOutForm">
                                 <label class="cartLabel">First Name</label>
@@ -172,9 +172,9 @@
                                 <br /><br />
                                 <br /><br />
                                 <br />
+                                <span class="cartLabel"></span>
                                 <br />
-                                <br />
-                                <button id="checkout" class="cartButton">Next : Proceed Billing Information</button>
+                                <button id="checkout" class="cartButton">Submit Request</button>
                             </form>
                         </div>
                         <div class="checkOutRight">
@@ -211,9 +211,9 @@
 
                 </div>
                 <div class="hidden">
-                    Thank you for your interest in <b>Smart Stove Alert</b>. We are currently out of stock.
+                    Thank you for your interest in <b>Smart Stove Alert</b>.
                     <p>
-                        We will inform you immediately when next revision of <b>Smart Stove Alert</b> is available.
+                        We will inform you immediately when <b>Smart Stove Alert</b> is available.
                     </p>
                 </div>
             </div>
