--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                                     </td>
                                     <td>
                                         <div class="cart" id="buynow">
-                                            Buy Now
+                                            Pre Order $0.00
                                         </div>
                                     </td>
                                 </tr>
@@ -210,7 +210,7 @@
             <div class="modal-content">
                 <span class="close">&times;</span>
                 <div>
-                    <h2 style="text-align:center;">Shopping Cart</h2>
+                    <h2 style="text-align:center;">Pre Order Details</h2>
 
                     <div style="text-align:center; color:#f4511e;">Thank You Choosing Smart Stove Alert</div>
                     <br />
@@ -237,7 +237,7 @@
                                 <br />
                                 <br />
                                 <br />
-                                <button id="checkout" class="cartButton">Next : Proceed Billing Information</button>
+                                <button id="checkout" class="cartButton">Submit Request</button>
                             </form>
                         </div>
                         <div class="checkOutRight">
@@ -274,9 +274,9 @@
 
                 </div>
                 <div class="hidden">
-                    Thank you for your interest in <b>Smart Stove Alert</b>. We are currently out of stock.
+                    Thank you for your interest in <b>Smart Stove Alert</b>. 
                     <p>
-                        We will inform you immediately when next revision of <b>Smart Stove Alert</b> is available.
+                        We will inform you immediately when <b>Smart Stove Alert</b> is available.
                     </p>
                 </div>
             </div>
