--- a/index.html
+++ b/index.html
@@ -221,19 +221,28 @@
                             <form id="checkOutForm">
                                 <label class="cartLabel">First Name</label>
                                 <input id="fname" class="cartText" type="text" placeholder="Enter First Name" name="fname"
-                                       pattern="/\b([A-Z]{1}[a-z]{1,30}[- ]{0,1}|[A-Z]{1}[- \']{1}[A-Z]{0,1}  
+                                       pattern="/\b([A-Z]{1}[a-z]{1,30}[- ]{0,1}|[A-Z]{1}[- \']{1}[A-Z]{0,1}
     [a-z]{1,30}[- ]{0,1}|[a-z]{1,2}[ -\']{1}[A-Z]{1}[a-z]{1,30}){2,5}/" required />
                                 <label class="cartLabel">Last Name</label>
                                 <input id="lname" class="cartText" type="text" placeholder="Enter Last Name" name="lname"
-                                       pattern="/\b([A-Z]{1}[a-z]{1,30}[- ]{0,1}|[A-Z]{1}[- \']{1}[A-Z]{0,1}  
+                                       pattern="/\b([A-Z]{1}[a-z]{1,30}[- ]{0,1}|[A-Z]{1}[- \']{1}[A-Z]{0,1}
     [a-z]{1,30}[- ]{0,1}|[a-z]{1,2}[ -\']{1}[A-Z]{1}[a-z]{1,30}){2,5}/" required />
                                 <br />
                                 <br />
                                 <label class="cartLabel">Email</label>
                                 <input id="email" class="cartEmail" type="email" placeholder="Enter Email Address" name="reply_to" required />
                                 <br />
-                                <br /><br />
-                                <br /><br />
+                                <br />
+                                <br />
+                                <span class="cartLabel">
+                                    * By submitting request you will be in our list and you will be informed as soon as the <b>Smart Stove Alert</b> is availabe. 
+                                    <br />
+                                    ** <b>Smart Stove Aler</b>t will be priced at $199.99.     
+                                    <br />                                
+                                    *** You will not be charged any amount today.
+                                </span>
+                                <br />
+                                <br />
                                 <br />
                                 <br />
                                 <br />
@@ -241,7 +250,7 @@
                             </form>
                         </div>
                         <div class="checkOutRight">
-                            <h3 style="color:#000; text-align:center; font-size:16px; font-weight:bold;">Order Summary</h3>
+                            <h3 style="color:#000; text-align:center; font-size:16px; font-weight:bold;">Price Details</h3>
                             <img src="images/SS1.JPG" width="75" height="70" style="margin-left:30px; margin-bottom:5px;" />
                             <div class="divRightCart">
                                 <span style="color:#000; font-weight:bold;font-size:12px;">Smart Stove Alert</span>
@@ -274,7 +283,7 @@
 
                 </div>
                 <div class="hidden">
-                    Thank you for your interest in <b>Smart Stove Alert</b>. 
+                    Thank you for your interest in <b>Smart Stove Alert</b>.
                     <p>
                         We will inform you immediately when <b>Smart Stove Alert</b> is available.
                     </p>
