--- a/AboutSSA.html
+++ b/AboutSSA.html
@@ -169,16 +169,25 @@
                                 <label class="cartLabel">Email</label>
                                 <input id="email" class="cartEmail" type="email" placeholder="Enter Email Address" name="reply_to" required />
                                 <br />
-                                <br /><br />
-                                <br /><br />
                                 <br />
-                                <span class="cartLabel"></span>
+                                <br />
+                                <span class="cartLabel">
+                                    * By submitting request you will be in our list and you will be informed as soon as the <b>Smart Stove Alert</b> is availabe.
+                                    <br />
+                                    ** <b>Smart Stove Aler</b>t will be priced at $199.99.
+                                    <br />
+                                    *** You will not be charged any amount today.
+                                </span>
+                                <br />
+                                <br />
+                                <br />
+                                <br />
                                 <br />
                                 <button id="checkout" class="cartButton">Submit Request</button>
                             </form>
                         </div>
                         <div class="checkOutRight">
-                            <h3 style="color:#000; text-align:center; font-size:16px; font-weight:bold;">Order Summary</h3>
+                            <h3 style="color:#000; text-align:center; font-size:16px; font-weight:bold;">Price Details</h3>
                             <img src="images/SS1.JPG" width="75" height="70" style="margin-left:30px; margin-bottom:5px;" />
                             <div class="divRightCart">
                                 <span style="color:#000; font-weight:bold;font-size:12px;">Smart Stove Alert</span>
