--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <body>
     <div id="warning-message">
 
-        this website is only viewable in landscape mode
+        <img src="images/turn.jpg" style="width: 100%;" />
 
     </div>
     <div id="wrapper">
