--- a/AboutSSA.html
+++ b/AboutSSA.html
@@ -35,8 +35,9 @@
 <body>
     <div id="warning-message">
 
-        this website is only viewable in landscape mode
+        <img src="images/turn.jpg" style="width: 100%;" />
 
+    </div>
     </div>
 
     <div id="wrapper">
